# ipc-frontier-py

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE.md  SECURITY.md  pdoc.toml  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md
.github/workflows/: ci.yaml  pages.yaml  release.yaml
ipc_frontier/: __init__.py  __main__.py  cli.py
scripts/: bump_version.sh  bumpver.sh  run_bench_docker.sh
tests/: __init__.py  conftest.py  test_cli.py  test_import.py  test_main.py  test_version_metadata.py
